- fixed bug in solve.c caused by integer overflow due to setting the number of cuts to INT_MAX
- fixed bug in cons_knapsack.c caused by having a multi-aggregated variable in a knapsack constraint, now applyFixing is able to resolve a binary multi-aggregation with integral values
- fixed bug in SCIPfreeProb() in scip.c: all pricers are deactivated now

plugins:
- added interface to QSopt due to Daniel Espinoza
- added reader for FlatZinc models (reader_fzn.{c,h})
- added multi-commodity-flow cut separator
- adjusted interface to ZIMPL (reader_zpl.{c,h} for ZIMPL version 2.10; this interface should also work with older ZIMPL versions
- added writer for GAMS models (reader_gms.{c,h})
- added constraint handler for quadratic constraints
- added first version of an interface to NLP solvers (type_nlpi.h, struct_nlpi.h, nlpi.h, nlpi.c, nlpi_oracle.h, nlpi_oracle.c)
- added first version of an interface to Ipopt (only QCP, no deletion of vars/cons allowed; nlpi_ipopt.(h|c))
- added heuristic that performs a local search in an NLP (takes only linear and quadratic constraints into account so far)

SCIP version 1.1.0
===============

compiling:
- added in all make/make.* "GMP_FLAGS" and "GMP_LDFLAGS"
- new flag GMP with values ("auto", "true, and "false"); in case of "auto" the library gmp is linked if 
  ZIMPL is included
- modified makefiles to accept ZIMPLOPT and LPSOPT flags (with values "opt" or "dbg" and default being "opt"),
  and removed LPS=spxdbg and LPS=clpdbg
- added "make/make.project" as default make include for external projects using SCIP
- adapted all makefiles of the examples accordingly
- added possibility to compile shared libraries in makefiles (and added make/make.linux.x86.gnu.opt-shared)
- replaced <string> by <cstring> in all C++-interfaces to get 'strlen()' included (gcc-4.3 gave an error)
- Moved -rpath option for ld to linux-specific Makefiles.
- Re-activated readline library on darwin/ppc.
- added target spx132 for SoPlex version 1.3.2